--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,13 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: my-database
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
 
 springfox:
   documentation:
